--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,26 +15,18 @@
             android:name=".view.activity.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
+        </activity>
+        <activity
+            android:name=".view.activity.SignInActivity">
+            <intent-filter
+                android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.activity.SignInActivity"
-            android:label="@string/title_activity_sign_in"
-            android:parentActivityName=".view.activity.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".view.activity.MainActivity"/>
-        </activity>
-        <activity
             android:name=".view.activity.SignUpActivity"
-            android:label="@string/title_activity_sign_up"
-            android:parentActivityName=".view.activity.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".view.activity.MainActivity"/>
+            android:label="@string/app_name">
         </activity>
         <activity
             android:name=".view.activity.AddPurchaseActivity"
